modifivation string anglais values

--- a/app/src/main/res/values-mcc237-mnc237-fr-rCM/string.xml
+++ b/app/src/main/res/values-mcc237-mnc237-fr-rCM/string.xml
@@ -2,7 +2,7 @@
 <resources>
     <string name="app_name">MyAccoutant</string>
 
-    <string name="title_activity_loading">Loading</string>
+    <string name="title_activity_loading">chargement</string>
     <string name="dummy_button">Dummy Button</string>
     <string name="dummy_content">DUMMY\nCONTENT</string>
     <string name="title_activity_main2">Main2Activity</string>
