--- a/app/src/main/res/layout/activity_log_in.xml
+++ b/app/src/main/res/layout/activity_log_in.xml
@@ -116,7 +116,7 @@
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="45dp"
         android:fontFamily="@font/roboto_light"
-        android:text="Sign up, if you’re new!"
+        android:text="@string/appbar_scrolling_view_behavior"
         android:clickable="true"
         android:textColor="@color/black"
         android:textSize="15sp" />
